# example

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pom.xml
ai-service/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
ai-service/app/: __init__.py
ai-service/app/api/: __init__.py
ai-service/app/api/v1/: __init__.py  ai_router.py  document_router.py  nlp_router.py  schemas.py
ai-service/app/models/: __init__.py  ai_models.py
ai-service/app/services/: __init__.py  document_service.py  nlp_service.py
ai-service/app/utils/: __init__.py  config.py  database.py  logger.py
ai-service/scripts/: start.sh
ai-service/tests/: test1.py  test_api.py  test_quick_sort.py
cloud-service/: pom.xml
cloud-service/src/main/java/com/example/test/ai/: AiServiceRegisteredEventListener.java
cloud-service/src/main/java/com/example/test/config/: RedissonConfig.java
cloud-service/src/main/java/com/example/test/controller/: TestController.java
cloud-service/src/main/java/com/example/test/demo/: BlockingExample.java  ConCurrentHashMapDemo.java  Java25NewFun.java  ListExample.java  NIODemo.java  NonBlockingExample.java  OkHttpDemo.java  OpenAIKeyGenerator.java  ReflectionExample.java  VarTest.java  VirtualThreadExample.java  VirtualThreadHttpExample.java
cloud-service/src/main/java/com/example/test/fastexcel/: DemoData.java
cloud-service/src/main/java/com/example/test/mapper/: UsersMapper.java
cloud-service/src/main/java/com/example/test/service/: RedisLockService.java
cloud-service/src/main/resources/: application.yml  sentinel-rules.json
cloud-service/src/test/java/com/example/test/: SimpleUnitTest.java
config/mariadb/init/: 01-init.sql
config/nginx/: nginx.conf
config/prometheus/: prometheus.yml
docker/: DOCKER_UPDATE_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml
scripts/: run.sh  validate-config.sh
src/main/java/com/example/test/: TestController.java
src/main/java/com/example/test/ai/: AiConfig.java  MyConfiguration.java  SentimentClassification.java
src/main/java/com/example/test/ai/assitant/: ChatAssistant.java  ChatBot.java
src/main/java/com/example/test/ai/chroma/: ChromaAddFolderFilesExample.java  RagApplication.java
src/main/java/com/example/test/ai/file/: FileWalkerNio.java
src/main/java/com/example/test/ai/ollama/: OllamaChatExample.java  OllamaEmbeddingMode2lExample.java  OllamaEmbeddingModelExample.java  OllamaStreamingChatExample.java
src/main/java/com/example/test/ai/service/: AiService.java
src/main/java/com/example/test/config/: DataSourceConfig.java  UndertowConfig.java
src/main/java/com/example/test/demo/: Point.java  RecordExample.java  StringBlock.java  VarTest.java
src/main/java/com/example/test/entity/: Users.java
src/main/java/com/example/test/math/: Nd4jExample.java
src/main/java/com/example/test/util/: OkHttpUtils.java
src/main/resources/: application.yml
src/test/java/com/example/test/: TestApplicationTests.java
(+47 files in other folders)
